--- a/styles/users.css
+++ b/styles/users.css
@@ -45,7 +45,6 @@ main {
   max-width: 1700px; /* 870 */
   min-height: 200px;
   padding: 10px;
-  padding-bottom: 20px;
   margin: 4px auto;
   border-radius: 6px;
   box-shadow: 0px 0.5px 3px black;
@@ -57,7 +56,7 @@ main > h2 {
   text-align: center;
 }
 .db {
-  margin: 20px auto;
+  margin: 20px;
   padding: 12px;
   background-color: white;
   border-radius: 6px;
@@ -71,9 +70,6 @@ section ol {
 .buttons {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: line;
-  margin: 10px auto;
-  padding: 10px;
   text-align: center;
   justify-content: center;
 }
