--- a/styles/users.css
+++ b/styles/users.css
@@ -56,7 +56,7 @@ main > h2 {
   text-align: center;
 }
 .db {
-  margin: 20px;
+  margin: 12px 4px;
   padding: 12px;
   background-color: white;
   border-radius: 6px;
