--- a/styles/login.css
+++ b/styles/login.css
@@ -14,6 +14,7 @@ main {
   padding: 20px;
   margin: auto;
   border-radius: 6px;
+  border-width: 0px;
   box-shadow: 0px 0.5px 3px black;
   background-color: #D5D5D59C;  
 }
