--- a/styles/login.css
+++ b/styles/login.css
@@ -37,7 +37,7 @@ article {
   border-style: solid;
   border-width: 2px;
   border-color: grey;
-  text-align: center;
+  text-align: left;
   margin: 5px auto 15px auto;
   padding: 10px;
   max-width: 200px;
