--- a/styles/login.css
+++ b/styles/login.css
@@ -9,8 +9,8 @@ header {
   padding-bottom: 10px;
 }
 main {
+  min-height: 500px;
   max-width: 400px;
-  height: 500px;
   padding: 20px;
   margin: auto;
   border-radius: 6px;
@@ -42,33 +42,37 @@ article {
   padding: 10px;
   max-width: 200px;
 }
-p {
+article > label {
+  display: block;
   font-weight: 700;
   padding: 5px;
   text-align: center;
+  margin-top: 1rem;
 }
-.entrar {  
-  border-radius: 6px;
-  padding: 10px;
-  text-align: center;
+input[type='submit'] {
+/*.entrar {  */
+  display: flex;
+  justify-content: center;
   font-weight: bold;
-  margin: 20px auto 40px auto;
-  } 
-p > a {
+  margin: 20px auto 30px auto;
+  /*} 
+p > a { */
+  border-width: 0px;
   border-radius: 8px;  
   background-color: #962c2ce0;
-  width: 68px;
-  height: 18px;
   text-align: center;
   color: white;
-  padding: 12px 16px;
-  text-decoration: none;
+  padding: 12px;
 }
-p > a:visited {
+.entrar:visited {
   color: white;
 } 
-p > a:hover {
+.entrar:hover {
+  cursor: pointer;
   background-color: #a34f4fea;
+}
+.entrar:active {
+  margin-top: 23px;
 }
 aside {
   font-size: 0.8em;
@@ -78,7 +82,7 @@ aside {
 }
 .links {
   padding: 5px;
-  margin: 5px 5px 30px 5px;
+  margin: 5px ;
 }
 aside > a {
   border-radius: 5px;
