--- a/styles/login.css
+++ b/styles/login.css
@@ -41,14 +41,14 @@ article {
   padding: 10px;
   max-width: 200px;
 }
-article > label {
+form > label {
   display: block;
   font-weight: 700;
   padding: 5px;
   text-align: center;
   margin-top: 1rem;
 }
-input[type='submit'] {
+input[type='button'] {
 /*.entrar {  */
   display: flex;
   justify-content: center;
@@ -71,7 +71,7 @@ p > a { */
   cursor: pointer;
   background-color: #a34f4fea;
 }
-article > a{
+form > a{
   text-decoration: none;
 }
 aside {
